--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "firebase": "^8.2.5",
     "firebase-admin": "^9.4.2",
     "firebase-functions": "^3.13.1",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "^2.2.0",
+    "react-google-button": "^0.7.2",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
